--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Thia is a git repo for the radar_visualization package for ROS environment
+This is a git repo for the radar_visualization package for ROS environment
